Update file hashes

--- a/openapi.properties
+++ b/openapi.properties
@@ -1,2 +1,2 @@
-#Thu Jun 10 20:25:11 IST 2021
-worldbanktest/openapi.yaml=003a42a3ecc7f2f56ade56c9330bf833
+#Fri Jun 11 02:47:57 GMT 2021
+worldbanktest/openapi.yaml=8d467aa5dbce559d5c48c241c4ef30c6
